--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
           </li>
       </ul>
    </div>
@@ -201,14 +201,14 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg">Download</button>
-    <button type="button" class="btn btn-lg btn-outline-light">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="download-button btn btn-dark btn-lg">Download</button>
+    <button type="button" class="download-button btn btn-lg btn-light">Download</button>
 
   </section>
 
 
-  <!-- Footer -->
+  <!-- Footer section -->
 
   <footer id="footer">
 
