--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-<section id="title">
+<section class="colored-section" id="title">
  <div class="container-fluid">
 
     <!-- Nav Bar -->
@@ -68,7 +68,7 @@
 
 <!-- Features -->
 
-<section id="features">
+<section class="white-section" id="features">
 
 <div class="container-fluid">
 
@@ -95,7 +95,7 @@
   
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" date-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
@@ -130,7 +130,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -141,7 +141,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing"> 
+  <section class="white-section" id="pricing"> 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
@@ -202,7 +202,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 <div class="container-fluid">
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="download-button btn btn-dark btn-lg">Download</button>
@@ -213,7 +213,7 @@
 
   <!-- Footer section -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
     <p>© Copyright TinDog</p>
     </div>    
@@ -223,3 +223,5 @@
 
 </html>
 
+
+<p>It's done baby, and here we go with 60 minutes of web design. so yeah! I'm moving forward, keep track of it. btw, I love you charm quark.</p>
