--- a/index.html
+++ b/index.html
@@ -225,3 +225,4 @@
 
 
 <p>It's done baby, and here we go with 60 minutes of web design. so yeah! I'm moving forward, keep track of it. btw, I love you charm quark.</p>
+<p>I may delete them</p>
