--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
 
 <body>
 
-<section class="colored-section" id="title">
-  
+ <section class="colored-section" id="title">
+
  <div class="container-fluid">
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="">tindog</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+       <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
               <a class="nav-link" href="#footer">Contact</a>
           </li>
@@ -54,17 +56,19 @@
               <a class="nav-link" href="#cta">Download</a>
           </li>
       </ul>
-   </div>
+
+      </div>
   </nav>
 
 
     <!-- Title -->
 
   <div class="row">
+
     <div class="col-lg-6">
       <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-      <button type="button" class="btn btn-dark btn-lg download-button">Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg download-button">Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>  
     <div class="col-lg-6">
       <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -83,16 +87,18 @@
 
 <div class="row">
  <div class="feature-box col-lg-4">
-  <!-- <i class="icon fas fa-check-circle-circle fa-4x"></i> -->
+  <i class="icon fas fa-check-circle fa-4x"></i>
   <h3 class="feature-title">Easy to use.</h3>
   <p>So easy to use, even your dog could do it.</p>
 </div>
 
 <div class="feature-box col-lg-4">
+  <i class="icon fas fa-bullseye fa-4x"></i>
   <h3 class="feature-title">Elite Clientele</h3>
   <p>We have all the dogs, the greatest dogs.</p>
 </div>
 <div class="feature-box col-lg-4">
+  <i class="icon fas fa-heart fa-4x"></i>
   <h3 class="feature-title">Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
 </div>
@@ -118,23 +124,23 @@
           <em>Beverly, Illinois</em>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
+      <!-- <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </button>
+      </button> -->
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+          </a>
     </div>
     
-
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
-  </section>
+</section>
 
 
   <!-- Press -->
@@ -166,7 +172,7 @@
        <p>5 Matches Per Day</p>
        <p>10 Messages Per Day</p>
        <p>Unlimited App Usage</p>
-       <button type="button">Sign Up</button>
+       <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
       </div>
     </div>
   </div>
@@ -181,7 +187,7 @@
        <p>Unlimited Matches</p>
        <p>Unlimited Messages</p>
        <p>Unlimited App Usage</p>
-       <button class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+       <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
       </div>
     </div>
   </div>
@@ -197,15 +203,13 @@
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
       </div>
     </div>
   </div>
   
 </div>
   
-<!-- </div> -->
-
   </section>
 
 
@@ -214,8 +218,8 @@
   <section class="colored-section" id="cta">
 <div class="container-fluid">
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="download-button btn btn-dark btn-lg">Download</button>
-    <button type="button" class="download-button btn btn-lg btn-light">Download</button>
+    <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="download-button btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
 </div>
   </section>
 
@@ -224,6 +228,10 @@
 
   <footer class="white-section" id="footer">
     <div class="container-fluid">
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
     <p>© Copyright TinDog</p>
     </div>    
   </footer>
@@ -233,5 +241,3 @@
 </html>
 
 
-<p>It's done baby, and here we go with 60 minutes of web design. so yeah! I'm moving forward, keep track of it. btw, I love you charm quark.</p>
-<p>I may delete them</p>
